--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ logs/av-res-dump-stats.json
 logs/av-res-dump.log
 logs/cronjob-sync.log
 logs/av-res-dump-stats.json
+logs/av-res-dump.log
+logs/cronjob-sync.log
+logs/sync.log
